--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "an3/multisource",
-  "description": "A Laravel 5.x package to extend the Eloquent Authentication Driver and support multiple login sources",
+  "description": "A Laravel 5.x package to extend the Eloquent Authentication Driver and support multiple login sources.",
   "type": "laravel-package",
   "license": "MIT",
   "authors": [
